// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu /> should render when positioned to Right: Closed Menu 1`] = `
.c1 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  width: 14px;
  height: 14px;
  color: #000;
}

.c0 {
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border: 1px solid #E0E0E0;
  border-radius: 5px;
  min-width: 140px;
  padding: 12px 15px;
}

.c0:hover {
  box-shadow: 0 0 0 2px #CBBEE7;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #CBBEE7;
}

.c0:active,
.c0[data-active=true] {
  box-shadow: 0 0 0 2px #CBBEE7;
}

.c0:disabled,
.c0:disabled:focus,
.c0:disabled:hover,
.c0[aria-disabled=true],
.c0[aria-disabled=true]:focus,
.c0[aria-disabled=true]:hover {
  background: #E0E0E0;
  color: rgba(30,6,84,0.5);
}

<div>
  <button
    aria-controls="menu--12"
    aria-haspopup="true"
    class="c0"
    data-reach-menu-button=""
    data-testid="menu-button"
    id="menu-button--menu--12"
    type="button"
  >
    Actions 
    <svg
      aria-hidden="true"
      class="c1"
      data-testid="menu-icon"
      fill="none"
      height="7"
      viewBox="0 0 10 7"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.95174 6.54518L0.70874 2.30218L2.12374 0.888184L4.95174 3.71718L7.77974 0.888184L9.19474 2.30218L4.95174 6.54518Z"
        fill="black"
      />
    </svg>
  </button>
</div>
`;

exports[`<Menu /> should render when positioned to Right: Open Menu 1`] = `
<div>
  <button
    aria-controls="menu--12"
    aria-haspopup="true"
    class="sc-bkbkJK bjgAvd"
    data-reach-menu-button=""
    data-testid="menu-button"
    id="menu-button--menu--12"
    type="button"
  >
    Actions 
    <svg
      aria-hidden="true"
      class="sc-bdnxRM dZCMJF"
      data-testid="menu-icon"
      fill="none"
      height="7"
      viewBox="0 0 10 7"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.95174 6.54518L0.70874 2.30218L2.12374 0.888184L4.95174 3.71718L7.77974 0.888184L9.19474 2.30218L4.95174 6.54518Z"
        fill="black"
      />
    </svg>
  </button>
</div>
`;

exports[`<Menu /> should render: Closed Menu 1`] = `
.c1 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  width: 14px;
  height: 14px;
  color: #000;
}

.c0 {
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border: 1px solid #E0E0E0;
  border-radius: 5px;
  min-width: 140px;
  padding: 12px 15px;
}

.c0:hover {
  box-shadow: 0 0 0 2px #CBBEE7;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #CBBEE7;
}

.c0:active,
.c0[data-active=true] {
  box-shadow: 0 0 0 2px #CBBEE7;
}

.c0:disabled,
.c0:disabled:focus,
.c0:disabled:hover,
.c0[aria-disabled=true],
.c0[aria-disabled=true]:focus,
.c0[aria-disabled=true]:hover {
  background: #E0E0E0;
  color: rgba(30,6,84,0.5);
}

<div>
  <button
    aria-controls="menu--1"
    aria-haspopup="true"
    class="c0"
    data-reach-menu-button=""
    data-testid="menu-button"
    id="menu-button--menu--1"
    type="button"
  >
    Actions 
    <svg
      aria-hidden="true"
      class="c1"
      data-testid="menu-icon"
      fill="none"
      height="7"
      viewBox="0 0 10 7"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.95174 6.54518L0.70874 2.30218L2.12374 0.888184L4.95174 3.71718L7.77974 0.888184L9.19474 2.30218L4.95174 6.54518Z"
        fill="black"
      />
    </svg>
  </button>
</div>
`;

exports[`<Menu /> should render: Open Menu 1`] = `
<div>
  <button
    aria-controls="menu--1"
    aria-haspopup="true"
    class="sc-bkbkJK bjgAvd"
    data-reach-menu-button=""
    data-testid="menu-button"
    id="menu-button--menu--1"
    type="button"
  >
    Actions 
    <svg
      aria-hidden="true"
      class="sc-bdnxRM dZCMJF"
      data-testid="menu-icon"
      fill="none"
      height="7"
      viewBox="0 0 10 7"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.95174 6.54518L0.70874 2.30218L2.12374 0.888184L4.95174 3.71718L7.77974 0.888184L9.19474 2.30218L4.95174 6.54518Z"
        fill="black"
      />
    </svg>
  </button>
</div>
`;
